# tribo-sim

./: .clang-format  .editorconfig  .gitignore  CLIMATE_CONTROL_SPEC.md  CMakeLists.txt  GAME_CONVERSION_STATUS.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MIGRATION_NOTES.md  PROJECT_ANALYSIS.md  README.md  SECURITY.md  TRIBOLONOTUS_SIMULATOR.md  idf_component.yml  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
.github/workflows/: build.yml  ci.yml
components/anim/: CMakeLists.txt  Kconfig  anim.c  anim.h  idf_component.yml
components/assets/: CMakeLists.txt  idf_component.yml  sprites.h
components/assets/sprites/: icon_sprites.c  reptile_sprites.c
components/audio/: CMakeLists.txt  Kconfig  audio.c  audio.h
components/esp32p4_reptile_bsp/: CMakeLists.txt  idf_component.yml
components/esp32p4_reptile_bsp/include/: bsp_reptile.h  esp_lcd_st7701.h
components/esp32p4_reptile_bsp/src/: bsp_display.c  bsp_lcd_st7701.c  bsp_sdcard.c  bsp_touch.c
components/esp_lcd_touch_gt911/: CMakeLists.txt  esp_lcd_touch_gt911.c  esp_lcd_touch_gt911.h  idf_component.yml
components/game/: CMakeLists.txt  Kconfig  game.c  game.h  idf_component.yml
components/input/: CMakeLists.txt  Kconfig  idf_component.yml  input.c  input.h
components/lvgl/: CMakeLists.txt
components/lvgl_port/: CMakeLists.txt  idf_component.yml  lv_conf.h
components/ota/: CMakeLists.txt  ota.c  ota.h
components/reptile_core/: CMakeLists.txt  idf_component.yml
components/reptile_core/include/: game_state.hpp  reptile_engine.hpp  reptile_engine_c.h
components/reptile_core/src/: reptile_engine.cpp  sim_admin.cpp  sim_behavior.cpp  sim_biology.cpp  sim_economy.cpp  sim_genetics.cpp  sim_nutrition.cpp  sim_physics.cpp  sim_reproduction.cpp  sim_sanitary.cpp  sim_seasonal.cpp  sim_security.cpp  sim_social.cpp  sim_technical.cpp  sim_weather.cpp
components/sim_display/: CMakeLists.txt  Kconfig  idf_component.yml  sim_display.c  sim_display.h
components/storage/: CMakeLists.txt  Kconfig  storage.c  storage.h
components/types/: CMakeLists.txt  types.h
docs/: burn_in.md  climate_control.md  hardware_validation.md  licensing.md  security_and_secrets.md  validation_plan.md
docs/templates/: burn_in_report.md
docs/test-reports/: 2025-05-01-uvi-integration.md
document/: MTK_JD9165BA_HKC7.0_IPS(QD070AS01-1)_1024x600_MIPI_1+2Dot_G2.2_20240729_andy_2lane.dtsi.txt
documents/soucis/: temps
firmware/common/: monocypher_LICENSE  ota_keys.c  ota_keys.h
firmware/controller/: README.md  partitions.csv  platformio.ini  sdkconfig.defaults
firmware/controller/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  climate.c  idf_component.yml  ota_state.c  secure_console.c  species_builtin.json  species_builtin_tlv.h  species_profiles.c  storage.c
firmware/controller/main/drivers/: alarms.c  alarms.h  bme280.c  bme280.h  calib.c  calib.h  climate.c  climate.h  dome_bus.c  dome_bus.h  dome_i2c.c  dome_i2c.h  ds3231.c  ds3231.h  fans.c  fans.h  i2c_bus.c  i2c_bus.h  onewire.c  onewire.h  pcf8574.c  pcf8574.h  sensors.c  sensors.h  sht21.c  sht21.h  sht31.c  sht31.h  ssr.c  ssr.h  tca9548a.c  tca9548a.h
firmware/controller/main/include/: climate.h  config.h  dome_regs.h  ota_manifest.h  ota_state.h  secure_console.h  species_profiles.h  storage.h
firmware/controller/main/net/: certs.h  credentials.c  credentials.h  httpd.c  httpd.h  light_payload.c  light_payload.h  ota_manifest.c  ota_stream.c  ota_stream.h  wifi.c  wifi.h
firmware/controller/main/test/: CMakeLists.txt  mock_ledc.c  mock_ledc.h  test_alarms_buzzer_ready.c  test_calib.c  test_climate_fail_safe.c  test_dome_bus_concurrency.c  test_http_security.c  test_light_payload.c  test_ota_stream.c  test_species.c
firmware/dome/: README.md  partitions.csv  platformio.ini  sdkconfig.defaults
firmware/dome/main/: CMakeLists.txt  app_main.c  idf_component.yml
firmware/dome/main/drivers/: fan_pwm.c  fan_pwm.h  i2c_slave_if.c  i2c_slave_if.h  ledc_cc.c  ledc_cc.h  ntc_adc.c  ntc_adc.h  uvi_sensor.c  uvi_sensor.h  ws2812_rmt.c  ws2812_rmt.h
firmware/dome/main/include/: config.h  regs.h
firmware/panel/: CMakeLists.txt  README.md  idf_component.yml  partitions.csv  sdkconfig.defaults
firmware/panel/components/app_config/: CMakeLists.txt  app_config.c
firmware/panel/components/app_config/include/: app_config.h
firmware/panel/components/drivers/: CMakeLists.txt  display_driver.c  lvgl_port.c  touch_gt911.c
firmware/panel/components/drivers/include/: display_driver.h  lvgl_port.h  touch_gt911.h
firmware/panel/components/network/: CMakeLists.txt  controller_cert_store.c  http_utils.c  network_manager.c  root_ca.h
firmware/panel/components/network/include/: controller_cert_store.h  network_manager.h
firmware/panel/components/ui/: CMakeLists.txt  localization.c  ui_main.c
firmware/panel/components/ui/include/: localization.h  ui_main.h
firmware/panel/main/: CMakeLists.txt  main.c
firmware/panel/test/: CMakeLists.txt  test_app_config.c  test_http_config.c  test_network_manager_faults.c
main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  app_tasks.c  battle_system.c  battle_system.h  climate_manager.c  climate_manager.h  climate_presets.c  climate_presets.h  climate_types.h  game_engine.c  game_engine.h  idf_component.yml  main.c  pet_simulator.c  pet_simulator.h  tribolonotus_types.h  tribomon_types.h  ui_bridge.c  ui_climate.c  ui_climate.h  ui_game.c  ui_game.h  ui_pet.c  ui_pet.h  wifi_manager.h
test/: CMakeLists.txt  test_game.c
tools/: burn_in.py  gen_species_tlv.py
