idf_component_register(
    SRCS "app_main.c"
         "drivers/i2c_bus.c"
         "drivers/tca9548a.c"
         "drivers/pcf8574.c"
         "drivers/ds3231.c"
         "drivers/ssr.c"
         "drivers/fans.c"
         "drivers/dome_i2c.c"
         "drivers/dome_bus.c"
         "drivers/onewire.c"
         "drivers/sht31.c"
         "drivers/sht21.c"
         "drivers/bme280.c"
         "drivers/sensors.c"
         "drivers/climate.c"
         "drivers/calib.c"
         "drivers/alarms.c"
         "net/wifi.c"
         "net/httpd.c"
         "net/light_payload.c"
         "net/credentials.c"
         "net/ota_stream.c"
         "net/ota_manifest.c"
         "species_profiles.c"
         "secure_console.c"
         "storage.c"
         "ota_state.c"
         "../common/ota_keys.c"
         "../common/monocypher.c"
    INCLUDE_DIRS "include" "drivers" "net" "../common"
    REQUIRES driver esp_driver_i2c esp_driver_gpio esp_driver_ledc esp_wifi esp_http_server nvs_flash esp_timer esp_adc json mbedtls console
)
